--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "ui for the movie analyst website....im totally not ripping this off.......",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "superagent": "^3.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
